--- a/scss/arboretum.scss
+++ b/scss/arboretum.scss
@@ -56,7 +56,7 @@
 }
 
 .feed {
-  max-height: 40rem;
+  max-height: 400px;
   overflow: scroll;
 }
 
@@ -78,6 +78,9 @@
   }
 }
 
+
+
+
 .plant-item {
   cursor: pointer;
   margin-bottom: 1rem;
@@ -88,8 +91,9 @@
   }
 
   img {
+    border-radius: 50%;
     float: left;
-    padding-right: .8rem;
+    margin-right: .8rem;
   }
 
   > * {
