--- a/css/app.css
+++ b/css/app.css
@@ -3641,12 +3641,13 @@ table.hover tr:nth-of-type(even):hover {
 
 .plant-item {
   cursor: pointer;
-  margin-bottom: 1rem;
+  margin-bottom: 1.75rem;
   transition: background-color .3s ease-out; }
   .plant-item:hover {
     background-color: #f2f2f2; }
   .plant-item img {
     border-radius: 50%;
+    height: 105px;
     float: left;
     margin-right: .8rem; }
   .plant-item > * {
