--- a/css/app.css
+++ b/css/app.css
@@ -3628,9 +3628,10 @@ table.hover tr:nth-of-type(even):hover {
   overflow: scroll; }
 
 .announcementItem {
-  background-color: #fff;
+  background-color: #fcfcfc;
   border-bottom: 1px solid #e6e6e6;
   border-radius: 2px;
+  max-width: 25rem;
   padding: .4rem .6rem; }
   .announcementItem p {
     color: #333; }
