--- a/scss/arboretum.scss
+++ b/scss/arboretum.scss
@@ -1,118 +1,5 @@
-.container {
-  width: 100%
-}
-
-nav.container {
-  background-color: $dark-primary-color;
-
-  ul {
-    border: none;
-  }
-
-  li {
-    color: #fff;
-  }
-}
-
-.is-active {
-  border-bottom: 3px solid #fff;
-}
-
-.calendar, .plants {
-  margin-top: 3rem;
-
-  h1 {
-    margin-left: 1rem;
-  }
-}
-
-.ui-datepicker {
-  background-color: #555;
-}
-
-.ui-datepicker-title {
-
-  > span {
-    color: $white;
-  }
-}
-
-.media {
-  color: $white;
-}
-
-.announcements {
-  margin-top: 2rem;
-}
-
-#facebook {
-  &.active {
-    background-color: #3b5998;
-  }
-}
-
-#google {
-  &.active {
-    background-color: #dd4b39;
-  }
-}
-
-#twitter {
-  &.active {
-    background-color: #55acee;
-  }
-}
-
-#apps {
-  &.active {
-    background-color: $primary-color;
-  }
-}
-
-.feed {
-  max-height: 400px;
-  overflow: scroll;
-}
-
-.announcementItem {
-  background-color: #fcfcfc;
-  border-bottom: 1px solid #e6e6e6;
-  border-radius: 2px;
-  max-width: 25rem;
-  padding: .4rem .6rem;
-
-  p {
-    color: #333;
-  }
-}
-
-.filter {
-  h4 {
-    display: inline-block;
-    margin-right: .4rem;
-  }
-}
-
-
-
-
-.plant-item {
-  cursor: pointer;
-  margin-bottom: 1.75rem;
-  transition: background-color .3s ease-out;
-
-  &:hover {
-    background-color: #f2f2f2;
-  }
-
-  img {
-    border-radius: 50%;
-    height: 105px;
-    float: left;
-    margin-right: .8rem;
-  }
-
-  > * {
-    display: inline;
-  }
-}
+@import "partials/base";
+@import "partials/calendar";
+@import "partials/announcements";
+@import "partials/plants";
+@import "partials/landmarks";
