--- a/scss/partials/_announcements.scss
+++ b/scss/partials/_announcements.scss
@@ -19,6 +19,14 @@
   100% { opacity: 0; }
 }
 
+.feed-container {
+  border: 2px solid #f2f2f2;
+  // border-top-left-radius: 4px;
+  // border-top-right-radius: 4px;
+  border-radius: 4px;
+  margin-bottom: 3rem;
+}
+
 .feed {
   max-height: 400px;
   overflow: scroll;
@@ -28,18 +36,32 @@
   background-color: #fcfcfc;
   border-bottom: 1px solid #e6e6e6;
   border-radius: 2px;
-  max-width: 25rem;
-  padding: .4rem .6rem;
+  max-width: 45rem;
+  padding: .7rem 0;
+  width: 100%;
 
   p {
     color: #333;
   }
 }
 
-.filter {
-  h4 {
-    display: inline-block;
-    margin-right: .4rem;
+.announcements {
+  margin-bottom: 4rem;
+
+  &:after {
+    border-top: 2px solid #ccc;
+    content: '';
+    left: 0;
+    max-width: 450px;
+    position: relative;
+    top: 5px;
+    width: 80%;
+  }
+}
+
+@media only screen and (max-width: 1024px) {
+  .announcements::after {
+    left: 10%;
   }
 }
 
@@ -60,4 +82,8 @@
       animation-timing-function: ease-in;
     }
   }
+}
+
+.app-copy {
+  margin-top: 4rem;
 }
